--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>My Title</title>
 
+    <link rel="stylesheet" type="text/css" href="src/systems/view_system/styles/main.css">
     <script src="node_modules/steal/steal.js"></script>
 </head>
 <body>
-<h1>My Body  3ada</h1>
+<h1>My Body  3adr</h1>
 </body>
 </html>
