fixing issue with non hidden release dependency

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>My Title</title>
 
-    <!-- @if BUILD='release' -->
+    <!-- @if BUILD='release' !>
         <script src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
-    <!-- @endif -->
+    <!-- @endif !>
 
     <!-- @exclude -->
         <link rel="stylesheet" type="text/css" href="../../src/client/systems/view_system/styles/main.css">
