--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,17 +5,24 @@
     <title>My Title</title>
 
     <!-- @if BUILD='release' !>
-        <script src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
     <!-- @endif !>
 
     <!-- @exclude -->
         <link rel="stylesheet" type="text/css" href="../../src/client/systems/view_system/styles/main.css">
-        <script src="../../node_modules/steal/steal.js"></script>
     <!-- @endexclude -->
 
 </head>
 <body>
-<h1>Hello world !!</h1>
+
+<div id="app"><h1>Hello World!!!</h1></div>
+<!-- @if BUILD='release' !>
+    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
+<!-- @endif !>
+
+<!-- @exclude -->
+<script src="../../node_modules/steal/steal.js"></script>
+<!-- @endexclude -->
 </body>
 </html>
