--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <title>My Title</title>
 
     <!-- @if BUILD='release' !>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="systems/view_system/styles/main.css">
     <!-- @endif !>
 
     <!-- @exclude -->
@@ -18,7 +18,6 @@
 <div id="app"><h1>Hello World!!!</h1></div>
 <!-- @if BUILD='release' !>
     <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
 <!-- @endif !>
 
 <!-- @exclude -->
