--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <title>My Title</title>
 
-    <!-- @if BUILD='release' !>
-        <link rel="stylesheet" type="text/css" href="systems/view_system/styles/main.css">
-    <!-- @endif !>
-
-    <!-- @exclude -->
-        <link rel="stylesheet" type="text/css" href="../../src/client/app/view_system/styles/main.css">
-    <!-- @endexclude -->
+    <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
 
 </head>
 <body>
