adding webpack for development --initial-commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,7 +15,7 @@
 <!-- @endif !>
 
 <!-- @exclude -->
-<script src="../../node_modules/steal/steal.js"></script>
+<script src="/webpack-dev-server.js"></script>
 <!-- @endexclude -->
 </body>
 </html>
