adding webpack for development --adding webpack middleware

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -22,14 +22,7 @@
 </head>
 <body>
 
-<div id="app"><h1>Hello World!!!</h1></div>
+<div id="app"><h1>Hello World 4!!!</h1></div>
 
-<!-- @if BUILD='release' !>
-    <script src="main.js"></script>
-<!-- @endif !>
-
-<!-- @exclude -->
-<script src="/webpack-dev-server.js"></script>
-<!-- @endexclude -->
 </body>
 </html>
