--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,14 +15,15 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
-    <!-- @if BUILD="release" !>
-        <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
-    <!-- @endif -->
+    <% if (htmlWebpackPlugin.options.metadata.isProduction) { %>
+    <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
+    <% } %>
+
 
 </head>
 <body>
 
-<div id="app"><h1>Hello World 4!!!</h1></div>
+<div id="app"><h1>Hello World!!!</h1></div>
 
 </body>
 </html>
