--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<div id="app"><h1>Hello World!!!</h1></div>
+<div id="app"><h1>Hello World 123!!!</h1></div>
 
 </body>
 </html>
