adding protractor support  --intial commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -25,5 +25,8 @@
 
 <div id="app"><h1>Hello World!!!</h1></div>
 
+<button id="sayHiButton">Say Hi!!</button>
+<span id="sayHiResponseLabel"></span>
+
 </body>
 </html>
