updating template design -- inital commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -27,6 +27,7 @@
 
 <button id="sayHiButton">Say Hi!!</button>
 <span id="sayHiResponseLabel"></span>
+<span id="uservalueLabel"></span>
 
 </body>
 </html>
