updating template design -- inital commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,11 +23,30 @@
 </head>
 <body>
 
-<div id="app"><h1>Hello World!!!</h1></div>
+<div id="app"><h1>Hello World!!!</h1>
+    <div>
+        <button id="sayHiButton">Say Hi!!</button>
+        <span id="sayHiResponseLabel"></span>
+    </div>
 
-<button id="sayHiButton">Say Hi!!</button>
-<span id="sayHiResponseLabel"></span>
-<span id="uservalueLabel"></span>
+    <div>
+        <button id="setUserButton">Set User</button>
+        <input type="text" placeholder="set username" id="setUserNameInput"/>
+        <span>Current User: </span>
+        <span id="currentUserLabel"></span>
+    </div>
+
+    <div>
+        <button id="setUserFirstNameButton">Set User First Name</button>
+        <input type="text" placeholder="set first name" id="setUserFirstNameInput"/>
+        <span>First Name: </span>
+        <span id="firstNameLabel"></span>
+    </div>
+
+</div>
+
+
+
 
 </body>
 </html>
