updating template design -- final commit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -43,6 +43,12 @@
         <span id="firstNameLabel"></span>
     </div>
 
+    <div>
+        <button id="getAPIValueButton">Get Api value</button>
+        <span>Value: </span>
+        <span id="apiValueLabel"></span>
+    </div>
+
 </div>
 
 
